<resources>
    <string name="app_name">TRNZT</string>

    <string name="action_settings">Settings</string>

    <string name="search_result">Search Results</string>
    <string name="latest_bus">Upcoming Bus</string>

    <string name="start">From</string>
    <string name="end">To</string>
    <string name="search">--></string>

    <string name="default_msg">Please Input Your Search Items</string>
    <string name="stop_id">Type a stop station id</string>
    <string name="no_result">No results found</string>
    <string name="depart_time">Time</string>
    <string name="depart_date">Date</string>
    <string name="route_detail">Route Detail</string>
    <string name="total_distance">Estimated Distance : </string>
    <string name="total_time">Estimated Time : </string>
    <string name="estimated_depart">Departure Time : </string>
    <string name="estimated_arrive">   Arrival Time : </string>


    <string name="nv_first">Login</string>
    <string name="nv_second">Refill Card</string>
    <string name="nv_third">Preferences</string>
    <string name="nv_forth">Notifications</string>
    <string name="nv_fifth">Setting</string>
    <string name="nv_sixth">Privacy Policy</string>
    <string name="nv_seventh">Rate Us</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="add_floating">+</string>

    <string name="time_select">Leave Now</string>

    <string-array name="time_options">
        <item>Leave Now</item>
        <item>Depart At</item>
        <item>Arrive By</item>
    </string-array>

    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="product_picture">Uploading Picture</string>
    <string name="no_info">Please fill in product number or price</string>
    <string name="register_button">Register</string>


    <string name="first_prefer">Transit Modes</string>
    <string name="second_prefer">Map Layers</string>
    <string name="third_prefer">Trip Planner</string>

    <string name="first_radio1">Light Rail</string>
    <string name="first_radio2">Bus</string>
    <string name="first_radio3">Funicular</string>
    <string name="first_radio4">Uber</string>

    <string name="second_radio1">My Locations</string>
    <string name="second_radio2">Bike Paths</string>
    <string name="second_radio3">Funicular</string>

    <string name="third_radio1">Minimize Walking</string>
    <string name="third_radio2">Less Transfer</string>

    <string name="notification1">"TRNZT" would like to send you notifications</string>
    <string name="notification2">Notifications may include alerts, sounds, and icon badges. These can be configured in Settings on your device.</string>


</resources>
