<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/findUpcoming"
            android:title="Find Upcoming Buses" />
        <item
            android:id="@+id/nav_first_fragment"
            android:title="@string/nv_first"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:title="@string/nv_second" />
        <item
            android:id="@+id/nav_third_fragment"
            android:title="@string/nv_third" />
        <item
            android:id="@+id/nav_forth_fragment"
            android:title="@string/nv_forth"
            app:showAsAction="always"
            android:actionLayout="@layout/layout_switch"
            />
    </group>
    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:title="@string/nv_sixth"
                    android:id="@+id/privacy_policy"/>
                <item
                    android:title="@string/nv_seventh" />
            </group>
        </menu>
    </item>

</menu>