<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/first_prefer"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/first_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/first_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/first_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio3"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/first_radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio4"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_prefer"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/second_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_radio1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/second_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/second_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_radio3"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_prefer"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/third_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_radio1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/third_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_radio2"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>