<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--EditText
        android:id="@+id/type_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start" />

    <EditText
        android:id="@+id/type_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end" /-->

    <fragment
        android:id="@+id/type_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <fragment
        android:id="@+id/type_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/time_options"
            android:prompt="@string/time_select" />

        <Button
            android:id="@+id/depart_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showTimePickerDialog"
            android:text="@string/depart_time" />

        <Button
            android:id="@+id/depart_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/depart_date" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />
    </LinearLayout>
</LinearLayout>